--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     <section class="hero">
         <div class="hero-content">
             <h2>Découvrez notre Matcha Vanille 100g</h2>
-            <a href="#" class="cta-btn">Découvrir</a>
+            <a href="#" class="cta-btn">Découvrir    e</a>
         </div>
         <img src="https://www.coffeeisland.ch/assets/img/product/matcha-latte.png" alt="Matcha Vanille">
     </section>
