--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,17 @@
 
 <body>
     <header>
-
+        <nav>
+            <div class="logo">
+                <img src="c:\Users\gamin\Pictures\crème. (2).png" alt="Logo du Matcha Tea">
+            </div>
+            <ul>
+                <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Accueil</a></li>
+                <li><a href="C:\Users\gamin\Documents\fansite\fansite2\fansite2.html">Histoire</a></li>
+                <li><a href="C:\Users\gamin\Documents\fansite\fansite3\fansite3.html">A propos</a></li>
+                <li><a href="C:\Users\gamin\Documents\fansite\index\contact\contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Section principale avec un produit en avant -->
