--- a/A propos/apropos.html
+++ b/A propos/apropos.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matcha Tea - Accueil</title>
-    <link rel="stylesheet" href="Matcha.css">
+    <link rel="stylesheet" href="apropos.css">
 </head>
 
 <body>
     <header>
+        <div class="logo">
+            <img src="https://cdn.discordapp.com/attachments/1326120582391009332/1326130557016608829/the_non-png-removebg-preview.png?ex=677e4ed3&is=677cfd53&hm=027f22eef9351e38ed38273cfb9182f70bcee6afb052438f0c63588fc0749b09&" alt="Logo du Matcha Tea">
+        </div>
+    </header>
+
+    <section>
         <nav>
-            <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1244569758813126667/1326114636583407708/creme._2.png?ex=677e3fff&is=677cee7f&hm=3dd55e35179a9907d0884f374e2de8c2dd4590a14d59c7ffb2e4678b6d1aa96d&" alt="Logo du Matcha Tea">
-            </div>
             <ul>
-                <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Accueil</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\fansite2\fansite2.html">Histoire</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\fansite3\fansite3.html">A propos</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\index\contact\contact.html">Contact</a></li>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">Nos produits</a></li>
+                <li><a href="">Histoire</a></li>
+                <li><a href="">A propos</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </section>
 
     <!-- Section principale avec un produit en avant -->
     <section class="hero">
@@ -29,17 +33,68 @@
             <h2>A propos de nous</h2>
             <a href="#" class="cta-btn">Découvrir</a>
         </div>
-        <img src="https://www.coffeeisland.ch/assets/img/product/matcha-latte.png" alt="Matcha Vanille">
+        <img src="https://cdn.discordapp.com/attachments/1244569758813126667/1326141822535209032/te-matcha_20d0f69c_958377604_240102144341_1280x720_be17506a-08e7-40bd-98d6-c2835ac69dd7.webp?ex=677e5951&is=677d07d1&hm=89dcf466e4f1e65fe6a79967665fe476e9cd2a1589bc9d71f01c2a332e3da744&" alt="Matcha Vanille">
     </section>
 
     <!-- Section des produits phares -->
-    <section class="featured-products">
+    <section class="equipe">
         <h2>Qui sommes nous ?</h2>
-            <div></div>
+        <div class="encadrement1">
+            <img src="https://via.placeholder.com/300" alt="Image exemple" class="image">
+            <p class="texte">Toni Montangon</p>
+            </div>
+        <div class="encadrement2">
+            <img src="https://via.placeholder.com/300" alt="Image exemple" class="image">
+            <p class="texte">Thomas Robert</p>
+            </div>
+        <div class="encadrement3">
+            <img src="https://via.placeholder.com/300" alt="Image exemple" class="image">
+            <p class="texte">Nathan Leleu</p>
+            </div>
     </section>
 
-    <footer>
+    <section>
+        <div class="paragraphe1">
+            <h3>Unis par l'amour du matcha</h3>
+                <p> Notre équipe est composée de personnes venant d'horizons divers, 
+                mais toutes partagent une chose en commun : une passion profonde pour le matcha. 
+                Chaque membre joue un rôle clé dans la création de produits qui respectent la tradition tout en explorant des innovations gustatives. 
+                Ensemble, nous vous invitons à découvrir l’univers du matcha sous un angle nouveau, en vous offrant des produits d'exception, 
+                soigneusement sélectionnés et préparés pour satisfaire vos papilles.</p>
+        </div>
 
+        <div class="paragraphe2">
+            <h3>Rencontrez notre équipe passionnée de Matcha</h3>
+                <p>Chez [Nom de votre entreprise], nous croyons que chaque tasse de matcha raconte une histoire de passion, 
+                    de tradition et d'engagement envers l'excellence. Notre équipe est composée d'experts, 
+                    de créateurs et de passionnés unis par un objectif commun : offrir à nos clients l'expérience la plus authentique et 
+                    délicieuse du matcha.</p>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="https://cdn.discordapp.com/attachments/1244569758813126667/1326119860169609297/the_non-png-removebg-preview.png?ex=677e44dc&is=677cf35c&hm=7da8ba09d406032d924c577bc0bf647941fab9cee3b64d71f30e2f2f0d15bf86&" alt="Logo Matcha Tea">
+            </div>
+                <div class="footer-column">
+                    <h4>Suivez-nous</h4>
+                    <ul class="social-links">
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Contact</h4>
+                    <p>Email: contact@matchatea.com</p>
+                    <p>Téléphone: +33 1 23 45 67 89</p>
+                    <p>Adresse: 123 Rue du Thé, Paris, France</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Matcha Tea - Tous droits réservés</p>
+        </div>
     </footer>
 </body>
 
