--- a/vente.html
+++ b/vente.html
@@ -16,6 +16,7 @@
             </div>
             <ul>
                 <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Accueil</a></li>
+                <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Nos produits</a></li>
                 <li><a href="C:\Users\gamin\Documents\fansite\fansite2\fansite2.html">Histoire</a></li>
                 <li><a href="C:\Users\gamin\Documents\fansite\fansite3\fansite3.html">A propos</a></li>
                 <li><a href="C:\Users\gamin\Documents\fansite\index\contact\contact.html">Contact</a></li>
