--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 
 <body>
     <header>
+        <div class="logo">
+            <img src="https://cdn.discordapp.com/attachments/1326120582391009332/1326130557016608829/the_non-png-removebg-preview.png?ex=677e4ed3&is=677cfd53&hm=027f22eef9351e38ed38273cfb9182f70bcee6afb052438f0c63588fc0749b09&" alt="Logo du Matcha Tea">
+        </div>
+    </header>
+
+    <section>
         <nav>
-            <div class="logo">
-                <img src="https://cdn.discordapp.com/attachments/1244569758813126667/1326114636583407708/creme._2.png?ex=677e3fff&is=677cee7f&hm=3dd55e35179a9907d0884f374e2de8c2dd4590a14d59c7ffb2e4678b6d1aa96d&" alt="Logo du Matcha Tea">
-            </div>
             <ul>
-                <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Accueil</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\index\index.html">Nos produits</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\fansite2\fansite2.html">Histoire</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\fansite3\fansite3.html">A propos</a></li>
-                <li><a href="C:\Users\gamin\Documents\fansite\index\contact\contact.html">Contact</a></li>
+                <li><a href="">Accueil</a></li>
+                <li><a href="">Nos produits</a></li>
+                <li><a href="">Histoire</a></li>
+                <li><a href="">A propos</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </section>
 
     <!-- Section principale avec un produit en avant -->
     <section class="hero">
@@ -53,30 +56,39 @@
     </section>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-logo">
-                <img src="https://cdn.discordapp.com/attachments/1244569758813126667/1326119860169609297/the_non-png-removebg-preview.png?ex=677e44dc&is=677cf35c&hm=7da8ba09d406032d924c577bc0bf647941fab9cee3b64d71f30e2f2f0d15bf86&" alt="Logo Matcha Tea">
-            </div>
-                <div class="footer-column">
-                    <h4>Suivez-nous</h4>
-                    <ul class="social-links">
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Contact</h4>
-                    <p>Email: contact@matchatea.com</p>
-                    <p>Téléphone: +33 1 23 45 67 89</p>
-                    <p>Adresse: 123 Rue du Thé, Paris, France</p>
-                </div>
-            </div>
+    <div class="footer-container">
+        <!-- Navigation section (à gauche) -->
+        <div class="footer-navigation">
+            <h4>Navigation</h4>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Histoire</a></li>
+                <li><a href="#">Événements</a></li>
+                <li><a href="#">Vente</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Matcha Tea - Tous droits réservés</p>
+
+        <!-- Section centrale -->
+        <div class="footer-center">
+            <p>Merci pour votre visite !</p>
+            <button class="footer-button">inscrivez-vous</button>
         </div>
-    </footer>
+
+        <!-- Section des coordonnées (à droite) -->
+        <div class="footer-contact">
+            <h4>Coordonnées</h4>
+            <p>123 rue du thé</p>
+            <p>13002 Marseille</p>
+            <p>France</p>
+        </div>
+    </div>
+
+    <!-- Ligne en bas (copyright) -->
+    <div class="footer-bottom">
+        <p>© La Plateforme_ 2025</p>
+    </div>
+</footer>
 </body>
 
 </html>
